@@ -1,4 +1,4 @@
 placesdir = $(pkgdatadir)/icons/hicolor/16x16/places
 places_DATA = playlist.png playlist-photo.png
 
-EXTRA_DIST = places_DATA
+EXTRA_DIST = $(places_DATA)
