@@ -1,4 +1,4 @@
 statusdir = $(pkgdatadir)/icons/hicolor/16x16/status
 status_DATA = star-none.png star-set.png star-unset.png
 
-EXTRA_DIST = status_DATA
+EXTRA_DIST = $(status_DATA)
