@@ -1,4 +1,4 @@
 placesdir = $(pkgdatadir)/icons/hicolor/scalable/places
 places_DATA = playlist.svg playlist-photo.svg
 
-EXTRA_DIST = places_DATA
+EXTRA_DIST = $(places_DATA)
