@@ -1,3 +1,3 @@
 man_MANS = gtkpod.1
 
-EXTRA_DIST = man_MANS
+EXTRA_DIST = $(man_MANS)
